[package]
name = "mev-sentinel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mev-sentinel"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket — use native-tls (WinSchannel on Windows, no C compiler needed)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"

# HTTP — use native-tls backend  
reqwest = { version = "0.12", features = ["native-tls", "json"], default-features = false }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# CSV
csv = "1.3"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Timestamps & utility
chrono = "0.4"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
